# lur

./: .dockerignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  codecov.yml  deny.toml  index.html
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
benches/: runtime.rs
dev/bench/: data.js
docs/: GUIDE.md
docs/superpowers/plans/: 2026-06-28-lur-crypto.md  2026-06-28-serve-response-headers.md  2026-06-29-lur-cookie.md  2026-06-29-lur-time.md  2026-06-29-req-cookies.md  2026-06-30-diagnostics-1-naming-and-rendering.md  2026-06-30-diagnostics-2-capability-arg-messages.md  2026-06-30-docs-render-styling.md  2026-06-30-guided-tour-docs.md  2026-06-30-storage-atomic-ops.md  2026-07-01-db-retry-with-jitter.md  2026-07-01-postgres-backend-phase2.md  2026-07-01-storage-backend-seam.md  2026-07-02-transaction-cancellation-safety.md
docs/superpowers/specs/: 2026-06-26-lur-lua-runtime-design.md  2026-06-28-lur-crypto-design.md  2026-06-28-serve-response-headers-design.md  2026-06-29-lur-cookie-design.md  2026-06-29-lur-time-design.md  2026-06-29-req-cookies-design.md  2026-06-30-diagnostics-design.md  2026-06-30-docs-render-styling-design.md  2026-06-30-guided-tour-docs-design.md  2026-06-30-storage-atomic-ops-design.md  2026-07-01-db-retry-with-jitter-design.md  2026-07-01-postgres-backend-phase2-design.md  2026-07-01-storage-backend-seam-design.md  2026-07-02-transaction-cancellation-safety-design.md
scripts/: docker-build.sh
src/: color.rs  config.rs  diagnostics.rs  docs.rs  lib.rs  main.rs  policy.rs  runtime.rs  serve.rs  units.rs
src/capabilities/: argcheck.rs  args.rs  async_ops.rs  base64.rs  cookie.rs  crypto.rs  db.rs  env.rs  fs.rs  http.rs  io.rs  json.rs  kv.rs  log.rs  mod.rs  null.rs  serve.rs  state.rs  time.rs
src/capabilities/storage/: mod.rs  postgres.rs  sqlite.rs
tests/: async_combinators.rs  capabilities.rs  cli.rs  cron.rs  db.rs  diagnostics.rs  docs_cmd.rs  fs.rs  guide.rs  http.rs  pg.rs  policy.rs  runtime.rs  serve.rs  serve_http.rs  state.rs
tests/fixtures/: alloc.lua  args.lua  async_peak.lua  env_read.lua  log.lua  ok.lua  raise.lua  read_arg.lua  stdin_all.lua  stdin_lines.lua  stdin_n.lua  stdout.lua
