[package]
name = "lur"
version = "0.1.0"
edition = "2024"

[lib]
name = "lur"
path = "src/lib.rs"

[[bin]]
name = "lur"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.45", default-features = false, features = ["std", "clock"] }
clap = { version = "4.6", features = ["derive"] }
cron = "0.17.0"
futures-util = { version = "0.3.32", default-features = false, features = ["std", "async-await"] }
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
mlua = { version = "0.11.6", features = ["luau", "async", "send"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "http2", "query"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.18"
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "time", "net", "sync"] }
toml = "1.1.2"

[dev-dependencies]
assert_cmd = "2.2.2"
criterion = "0.8.2"
predicates = "3.1.4"
tempfile = "3.27.0"

[[bench]]
name = "runtime"
harness = false
