[package]
name = "lur"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "lur"
path = "src/lib.rs"

[[bin]]
name = "lur"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.45", default-features = false, features = ["std", "clock"] }
clap = { version = "4.6", features = ["derive"] }
cron = "0.17.0"
futures-util = { version = "0.3.32", default-features = false, features = ["std", "async-await"] }
getrandom = "0.2.15"
hex = "0.4.3"
hmac = "0.12.1"
http-body-util = "0.1.3"
httpdate = "1.0.3"
hyper = { version = "1.10.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
md-5 = "0.10.6"
mlua = { version = "0.11.6", features = ["luau", "async", "send"] }
pulldown-cmark = { version = "0.13.4", default-features = false }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "http2", "query"] }
serde_json = "1.0.150"
sha1 = "0.10.6"
sha2 = "0.10.9"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "tls-rustls-aws-lc-rs"] }
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "time", "net", "sync", "signal", "macros"] }
toml = "1.1.2"

[dev-dependencies]
assert_cmd = "2.2.2"
criterion = "0.8.2"
predicates = "3.1.4"
tempfile = "3.27.0"

[[bench]]
name = "runtime"
harness = false

# https://github.com/EmbarkStudios/rust-ecosystem/blob/732513edfd9172f4eda358b2d0cefc6cad1585ee/lints.rs
[lints.rust]
unexpected_cfgs = "deny"
unsafe_code = "deny"

[lints.clippy]
all = "warn"
await_holding_lock = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_markdown = "warn"
empty_enums = "warn"
enum_glob_use = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_ok_or = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
missing_enforced_import_renames = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
unimplemented = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"
