[package]
name = "lur"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "lur"
path = "src/lib.rs"

[[bin]]
name = "lur"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.45", default-features = false, features = ["std", "clock"] }
clap = { version = "4.6", features = ["derive", "env"] }
cron = "0.17.0"
futures-util = { version = "0.3.32", default-features = false, features = ["std", "async-await"] }
getrandom = "0.4.3"
hex = "0.4.3"
hmac = "0.13.0"
http-body-util = "0.1.3"
httpdate = "1.0.3"
hyper = { version = "1.10.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
md-5 = "0.11.0"
mlua = { version = "0.12.0", features = ["luau", "async", "send"] }
pulldown-cmark = { version = "0.13.4", default-features = false }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "http2", "query"] }
serde_json = "1.0.150"
sha1 = "0.11.0"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "tls-rustls-aws-lc-rs"] }
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "time", "net", "sync", "signal", "macros"] }
toml = "1.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi", "json"] }

[dev-dependencies]
assert_cmd = "2.2.2"
criterion = "0.8.2"
predicates = "3.1.4"
tempfile = "3.27.0"

[[bench]]
name = "runtime"
harness = false

# Self-maintained lint set (originally seeded from Embark Studios' rust-ecosystem
# list). The bulk of the old itemised pedantic lints are now covered by the
# `pedantic` group; only the noisy/low-signal ones are opted back out, plus the
# restriction and nursery lints that have no safe umbrella group.
[lints.rust]
unexpected_cfgs = "deny"
unsafe_code = "deny"

[lints.clippy]
# Groups (priority -1 so the individual entries below win).
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Opt out of the noisy / low-signal pedantic lints.
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
duration_suboptimal_units = "allow"
items_after_statements = "allow"
many_single_char_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"

# Restriction lints (no safe umbrella group — kept itemised).
dbg_macro = "warn"
exit = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_add = "warn"
todo = "warn"
unimplemented = "warn"
verbose_file_reads = "warn"

# Nursery picks (the nursery group as a whole is too unstable to enable).
debug_assert_with_mut_call = "warn"
fallible_impl_from = "warn"
trait_duplication_in_bounds = "warn"
